# skyscraper-smackdown

./: .gitignore  README.md  pyproject.toml
src/: building.py  main.py
src/game/objects/: debris.py  falling_proyectile.py  player.py
src/game/systems/: debris_generator.py
src/game/world/: lane.py
