[project]
package-mode = false
name = "skyscraper-smackdown"
version = "0.1.0"
description = "Project for PyWeek 40 by Dev-ilish team"
authors = [
    {name = "maevescript",email = "virtualmaeve@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arcade (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
